Fix graph resizing (now with body overflow)

--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -20,7 +20,8 @@ body,
 }
 
 main {
-  flex: 1;
+  flex: 1 1 0;
+  overflow-y: hidden;
   display: flex;
   min-height: 100%;
   gap: 1rem;
